--- a/Web_PizzaShop/Pages/Public/Menu.cshtml
+++ b/Web_PizzaShop/Pages/Public/Menu.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/menu"
 @model Web_PizzaShop.Pages.Public.MenuModel
 @{
     Layout = "_Layout";
@@ -6,7 +6,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Pizza - Free Bootstrap 4 Template by Colorlib</title>
+	<title>Pizza Shop</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -34,7 +34,7 @@
 	<link rel="stylesheet" href="~/css/style.css">
 </head>
 <body>
-	<section class="home-slider owl-carousel img" style="background-image: url(images/bg_1.jpg);">
+	<section class="home-slider owl-carousel img" style="background-image: url('~/images/bg_1.jpg');">
 
 		<div class="slider-item" style="background-image: url(images/bg_3.jpg);">
 			<div class="overlay"></div>
