--- a/Web_PizzaShop/Pages/Shared/_Layout.cshtml
+++ b/Web_PizzaShop/Pages/Shared/_Layout.cshtml
@@ -40,10 +40,9 @@
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item active"><a asp-page="/Index" class="nav-link">Home</a></li>
                         <li class="nav-item"><a asp-page="/Public/Menu" class="nav-link">Menu</a></li>
-                        <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
-                        <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-                        <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-                        <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+                        <li class="nav-item"><a asp-page="/Common/Login" class="nav-link">Login</a></li>
+                        <li class="nav-item"><a asp-page="/Common/Register" class="nav-link">Register</a></li>
+                      
                     </ul>
                 </div>
             </div>
