shopping cart, ordered detail

--- a/Web_PizzaShop/Pages/Customer/ShoppingCart.cshtml
+++ b/Web_PizzaShop/Pages/Customer/ShoppingCart.cshtml
@@ -24,11 +24,11 @@
 
         .shop_table thead th, .shop_table .order-total td, .shop_table .order-total th {
             border-width: 3px;
-            color: white;
+            color: wheat;
         }
 
         a {
-            color: white;
+            color: wheat;
             text-decoration: none;
         }
 
@@ -38,13 +38,13 @@
 
         span.amount {
             white-space: nowrap;
-            color: white;
+            color: wheat;
             font-weight: bold;
         }
 
         .cart_totals th.product-name {
             border-width: 3px;
-            color: white;
+            color: wheat;
         }
 
         .widget-title i {
@@ -54,17 +54,17 @@
         }
 
         .cart_totals tbody th {
-            color: white;
+            color: wheat;
         }
 
         .is-outline:hover, .primary.is-outline:hover {
-            color: #fff;
-            background-color: yellowgreen;
-            border-color: yellowgreen;
+            color: wheat;
+            background-color: #446084;
+            border-color: #446084;
         }
 
         .primary.is-underline, .primary.is-link, .primary.is-outline {
-             color: white; 
+             color: wheat; 
         }
 
         .button.disabled, button.disabled, .button[disabled], button[disabled] {
@@ -72,6 +72,10 @@
         }
         h3{
             color:white
+        }
+
+        .dark .button.is-form:hover, .button:hover{
+            color: wheat;
         }
     </style>
 </head>
