--- a/Web_PizzaShop/Pages/Public/Menu.cshtml
+++ b/Web_PizzaShop/Pages/Public/Menu.cshtml
@@ -1,4 +1,4 @@
-﻿@page "/menu"
+﻿@page
 @model Web_PizzaShop.Pages.Public.MenuModel
 @{
     Layout = "_Layout";
@@ -10,18 +10,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do" rel="stylesheet">
-
-	<link rel="stylesheet" href="~/css/open-iconic-bootstrap.min.css">
-	<link rel="stylesheet" href="~/css/animate.css">
-
-	<link rel="stylesheet" href="~/css/owl.carousel.min.css">
-	<link rel="stylesheet" href="~/css/owl.theme.default.min.css">
-	<link rel="stylesheet" href="~/css/magnific-popup.css">
-
-	<link rel="stylesheet" href="~/css/aos.css">
+	<section class="home-slider owl-carousel img" style="background-image: url('images/bg_1.jpg');">
 
 	<link rel="stylesheet" href="~/css/ionicons.min.css">
 
@@ -74,7 +63,7 @@
 				</div>
 				<div class="col-lg-4 d-flex ftco-animate">
 					<div class="services-wrap d-flex">
-						<a href="#" class="img" style="background-image: url(images/pizza-2.jpg);"></a>
+						<a href="#" class="img" style="background-image: url(../../wwwroot/images/pizza-2.jpg);"></a>
 						<div class="text p-4">
 							<h3>Greek Pizza</h3>
 							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
@@ -446,6 +435,5 @@
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
 	<script src="~/js/google-map.js"></script>
 	<script src="~/js/main.js"></script>
-
 </body>
 </html>
