--- a/Web_PizzaShop/Pages/Shared/_AdminLayout.cshtml
+++ b/Web_PizzaShop/Pages/Shared/_AdminLayout.cshtml
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
-
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,9 +9,12 @@
     <meta name="author" content="">
     <link rel="icon" href="~/images/required/ico/favicon.ico">
     <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="~/images/required/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="~/images/required/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="~/images/required/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144"
+        href="~/images/required/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114"
+        href="~/images/required/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72"
+        href="~/images/required/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="~/images/required/ico/apple-touch-icon-57-precomposed.png">
     <link rel="shortcut icon" href="~/images/required/ico/favicon.png">
 
@@ -19,7 +22,6 @@
 
     <!-- Required CSS Files -->
     <link type="text/css" href="~/css/required/bootstrap/bootstrap.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,300&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link type="text/css" href="~/js/required/jquery-ui-1.11.0.custom/jquery-ui.min.css" rel="stylesheet" />
     <link type="text/css" href="~/js/required/jquery-ui-1.11.0.custom/jquery-ui.structure.min.css" rel="stylesheet" />
     <link type="text/css" href="~/js/required/jquery-ui-1.11.0.custom/jquery-ui.theme.min.css" rel="stylesheet" />
@@ -53,6 +55,7 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
+
 <body>
     <div class="container-fluid">
         <div id="header-container">
@@ -68,7 +71,8 @@
                         </div>
                         <!-- END logo -->
                         <!-- START Mobile Menu Toggle -->
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse"
+                            data-target=".navbar-collapse">
                             <span class="sr-only">Toggle navigation</span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -86,7 +90,7 @@
                                     <li>
                                         <a href="#" class="top">
                                             <span class="header-profile-menu-icon">
-                                                <img class="list-thumbnail" src="http://placehold.it/39x39" width="39" height="39" alt="39x39" />
+                                                <img class="list-thumbnail" src="" width="39" height="39" alt="39x39" />
                                             </span>
                                             <span class="main-menu-text">
                                                 Ken Adams
@@ -125,4 +129,5 @@
         </div>
     </div>
 </body>
+
 </html>
