update model & complete manage pizza

--- a/Web_PizzaShop/Pages/Admin/ProductList.cshtml
+++ b/Web_PizzaShop/Pages/Admin/ProductList.cshtml
@@ -192,7 +192,7 @@
 																		class="pizza-checkbox">
 																</td>
 																<td class="text-center">
-																	<img src="#" width="40" height="40" class="list-thumbnail"
+																	<img src="data:image/jpeg;base64,@pizza.ImageUrl" width="60" height="45" class=""
 																		alt="" />
 																</td>
 																<td class="text-left">@pizza.Name</td>
