--- a/Web_PizzaShop/Pages/Admin/AddProduct.cshtml
+++ b/Web_PizzaShop/Pages/Admin/AddProduct.cshtml
@@ -97,11 +97,10 @@
                                             <li class="active">
                                                 <a href="#product-edit-tabs-general" data-toggle="tab">General</a>
                                             </li>
-                                            <li><a href="#product-edit-tabs-data" data-toggle="tab">Data</a></li>
                                         </ul>
                                         <div class="tab-content">
                                             <div class="tab-pane active" id="product-edit-tabs-general">
-                                                <div class="form-group">
+                                                @* <div class="form-group">
                                                     <label for="product-location"
                                                         class="col-sm-2 col-md-2 control-label">
                                                         Image
@@ -126,7 +125,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                </div>
+                                                </div> *@
                                                 <div class="form-group">
                                                     <label for="product-name" class="col-sm-2 col-md-2 control-label">
                                                         Pizza Name
@@ -196,82 +195,6 @@
                                                     <div class="col-sm-4">
                                                         <input asp-for="@Model.pizza.DeletedAt" type="date"
                                                             class="form-control" readonly />
-                                                    </div>
-                                                </div>
-
-                                            </div>
-                                            <div class="tab-pane" id="product-edit-tabs-data">
-                                                <div class="form-group">
-                                                    <label for="product-model" class="col-sm-2 col-md-2 control-label">
-                                                        Model
-                                                    </label>
-                                                    <div class="col-sm-4">
-                                                        <input type="text" class="form-control" id="product-model"
-                                                            placeholder="Enter product model number" value=''>
-                                                    </div>
-                                                </div>
-                                                <div class="form-group">
-                                                    <label for="product-sku" class="col-sm-2 col-md-2 control-label">
-                                                        SKU
-                                                    </label>
-                                                    <div class="col-sm-4">
-                                                        <input type="text" class="form-control" id="product-sku"
-                                                            placeholder="Enter product SKU" value=''>
-                                                    </div>
-                                                </div>
-                                                <div class="form-group">
-                                                    <label for="product-location"
-                                                        class="col-sm-2 col-md-2 control-label">
-                                                        Location
-                                                    </label>
-                                                    <div class="col-sm-4">
-                                                        <input type="text" class="form-control" id="product-location"
-                                                            placeholder="Where is this item located?" value=''>
-                                                    </div>
-                                                </div>
-                                                <div class="form-group">
-                                                    <label for="product-location"
-                                                        class="col-sm-2 col-md-2 control-label">
-                                                        Price
-                                                    </label>
-                                                    <div class="col-sm-2">
-                                                        <input type="text" class="form-control" id="product-price"
-                                                            placeholder="Format: $1234.56" value=''>
-                                                    </div>
-                                                </div>
-                                                <div class="form-group">
-                                                    <label for="product-tax"
-                                                        class="col-sm-2 col-md-2 control-label">Taxable</label>
-                                                    <div class="col-sm-1">
-                                                        <select id="product-tax" class="form-control">
-                                                            <option>Yes</option>
-                                                            <option>No</option>
-                                                        </select>
-                                                    </div>
-                                                </div>
-                                                <div class="form-group">
-                                                    <label for="product-location"
-                                                        class="col-sm-2 col-md-2 control-label">
-                                                        Image
-                                                    </label>
-                                                    <div class="col-sm-9">
-                                                        <div class="row">
-                                                            <div class="col-sm-3">
-                                                                <div class="product-image-preview">
-                                                                    <a href="#" data-toggle="modal"
-                                                                        data-target="#product-image-preview-1">
-                                                                        <img src="" width="150" height="150" alt="">
-                                                                    </a>
-                                                                    <p class="text-center">
-                                                                        <a href="#" data-toggle="modal"
-                                                                            data-target="#product-image-preview-1">
-                                                                            Change
-                                                                            Image
-                                                                        </a>
-                                                                    </p>
-                                                                </div>
-                                                            </div>
-                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
