--- a/Web_PizzaShop/Pages/Common/ChangePassword.cshtml
+++ b/Web_PizzaShop/Pages/Common/ChangePassword.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Web_PizzaShop.Pages.Common.LoginModel
+@model Web_PizzaShop.Pages.Common.ChangePasswordModel
 @{
     Layout = "_Layout";
 }
