--- a/Web_PizzaShop/Pages/Common/LoginPage.cshtml
+++ b/Web_PizzaShop/Pages/Common/LoginPage.cshtml
@@ -2,6 +2,7 @@
 @model Web_PizzaShop.Pages.Common.LoginPageModel
 @{
     Layout = "_Layout";
+    
 }
 <!DOCTYPE html>
 <html lang="en">
@@ -34,11 +35,11 @@
                 <form method="POST" class="register-form" id="login-form">
                     <div class="form-group">
 
-                        <input type="text" name="your_name" id="your_name" placeholder="UserName" asp-for="@Model.UserLogin.UserName"/>
+                        <input type="text" asp-for="@Model.userName" placeholder="UserName" />
                     </div>
                     <div class="form-group">
                         <label for="your_pass"><i class="fa-solid fa-lock"></i></label>
-                        <input type="password" name="your_pass" id="your_pass" placeholder="Password" asp-for="@Model.UserLogin.PasswordHash" />
+                        <input type="password" asp-for="@Model.password" placeholder="Password" />
                     </div>
                     <div class="form-group">
                         <input type="checkbox" name="remember-me" id="remember-me" class="agree-term" />
