--- a/Web_PizzaShop/Pages/Common/LoginPage.cshtml
+++ b/Web_PizzaShop/Pages/Common/LoginPage.cshtml
@@ -27,7 +27,7 @@
         <div class="signin-content">
             <div class="signin-image">
                 <figure><img src="~/images/image_3.jpg" alt="sing up image"></figure>
-                <a href="#" class="signup-image-link">Create an account</a>
+                <a href="Register" class="signup-image-link">Create an account</a>
             </div>
 
             <div class="signin-form">
@@ -35,7 +35,7 @@
                 <form method="POST" class="register-form" id="login-form">
                     <div class="form-group">
 
-                        <input type="text" asp-for="@Model.userName" placeholder="UserName" />
+                        <input type="text" asp-for="@Model.email" placeholder="Email" />
                     </div>
                     <div class="form-group">
                         <label for="your_pass"><i class="fa-solid fa-lock"></i></label>
