--- a/Web_PizzaShop/Pages/Admin/OrderView.cshtml
+++ b/Web_PizzaShop/Pages/Admin/OrderView.cshtml
@@ -136,7 +136,7 @@
 														</tr>
 														<tr>
 															<td class="col-md-3">Date Created:</td>
-															<td class="col-md-9">@Model.order.CreatedAt.ToString("dd/MM/yyyy")</td>
+															<td class="col-md-9">@Model.order.CreatedAt?.ToString("dd/MM/yyyy")</td>
 														</tr>
 													</tbody>
 												</table>
