--- a/Web_PizzaShop/Pages/Common/LoginPage.cshtml
+++ b/Web_PizzaShop/Pages/Common/LoginPage.cshtml
@@ -49,6 +49,7 @@
                         <input type="submit" name="signin" id="signin" class="form-submit" value="Log in" />
                     </div>
                 </form>
+                <p style="color: red"> @Model.msg </p>
                 <div class="social-login">
                     <span class="social-label">Or login with</span>
                     <ul class="socials">
