--- a/Web_PizzaShop/Pages/Public/Menu.cshtml
+++ b/Web_PizzaShop/Pages/Public/Menu.cshtml
@@ -1,5 +1,8 @@
 ﻿@page
 @model Web_PizzaShop.Pages.Public.MenuModel
+@{
+    Layout = "_Layout";
+}
 @Html.AntiForgeryToken()
 <!DOCTYPE html>
 <html lang="en">
