--- a/Web_PizzaShop/Pages/Customer/Ordered.cshtml
+++ b/Web_PizzaShop/Pages/Customer/Ordered.cshtml
@@ -1,89 +1,454 @@
 ﻿@page
 @model Web_PizzaShop.Pages.Customer.OrderedModel
 @{
+    Layout = "_Layout";
+    decimal? total = 0;
 }
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Order Detail - PizzaShop</title>
-    <link rel="stylesheet" href="style.css">
-    <style type="text/css">
-        body {
-            font-family: Arial, sans-serif;
-            padding: 20px;
-            background-color: #f4f4f4;
-        }
+@Html.AntiForgeryToken()
+<style>
+    body{margin-top:20px;
+background-color: #f1f3f7;
+}
 
-        h2 {
-            color: red;
-            text-align: center;
-        }
+.card {
+    margin-bottom: 24px;
+    -webkit-box-shadow: 0 2px 3px #e4e8f0;
+    box-shadow: 0 2px 3px #e4e8f0;
+}
+.card {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid #eff0f2;
+    border-radius: 1rem;
+}
+.activity-checkout {
+    list-style: none
+}
 
-        .order-details {
-            width: 100%;
-            max-width: 600px; 
-            border-collapse: collapse;
-            margin: 20px auto;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
+.activity-checkout .checkout-icon {
+    position: absolute;
+    top: -4px;
+    left: -24px
+}
 
-            .order-details th, .order-details td {
-                padding: 10px;
-                border: 1px solid #ddd; 
-                text-align: left;
+.activity-checkout .checkout-item {
+    position: relative;
+    padding-bottom: 24px;
+    padding-left: 35px;
+    border-left: 2px solid #f5f6f8
+}
+
+.activity-checkout .checkout-item:first-child {
+    border-color: #3b76e1
+}
+
+.activity-checkout .checkout-item:first-child:after {
+    background-color: #3b76e1
+}
+
+.activity-checkout .checkout-item:last-child {
+    border-color: transparent
+}
+
+.activity-checkout .checkout-item.crypto-activity {
+    margin-left: 50px
+}
+
+.activity-checkout .checkout-item .crypto-date {
+    position: absolute;
+    top: 3px;
+    left: -65px
+}
+
+
+
+.avatar-xs {
+    height: 1rem;
+    width: 1rem
+}
+
+.avatar-sm {
+    height: 2rem;
+    width: 2rem
+}
+
+.avatar {
+    height: 3rem;
+    width: 3rem
+}
+
+.avatar-md {
+    height: 4rem;
+    width: 4rem
+}
+
+.avatar-lg {
+    height: 6rem;
+    width: 8rem
+}
+
+.avatar-xl {
+    height: 6rem;
+    width: 6rem
+}
+
+.avatar-title {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    background-color: #3b76e1;
+    color: #fff;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    font-weight: 500;
+    height: 100%;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    width: 100%
+}
+
+.avatar-group {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    padding-left: 8px
+}
+
+.avatar-group .avatar-group-item {
+    margin-left: -8px;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    -webkit-transition: all .2s;
+    transition: all .2s
+}
+
+.avatar-group .avatar-group-item:hover {
+    position: relative;
+    -webkit-transform: translateY(-2px);
+    transform: translateY(-2px)
+}
+
+.card-radio {
+    background-color: #fff;
+    border: 2px solid #eff0f2;
+    border-radius: .75rem;
+    padding: .5rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    display: block
+}
+
+.card-radio:hover {
+    cursor: pointer
+}
+
+.card-radio-label {
+    display: block
+}
+
+.edit-btn {
+    width: 35px;
+    height: 35px;
+    line-height: 40px;
+    text-align: center;
+    position: absolute;
+    right: 25px;
+    margin-top: -50px
+}
+
+.card-radio-input {
+    display: none
+}
+
+.card-radio-input:checked+.card-radio {
+    border-color: #3b76e1!important
+}
+
+
+.font-size-16 {
+    font-size: 16px!important;
+}
+.text-truncate1 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+a {
+    text-decoration: none!important;
+}
+
+
+.form-control1 {
+    display: block;
+    width: 100%;
+    padding: 0.47rem 0.75rem;
+    font-size: .875rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #545965;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #e2e5e8;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: 0.75rem;
+    -webkit-transition: border-color .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
+    transition: border-color .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
+}
+
+.edit-btn {
+    width: 35px;
+    height: 35px;
+    line-height: 40px;
+    text-align: center;
+    position: absolute;
+    right: 25px;
+    margin-top: -50px;
+}
+
+.ribbon {
+    position: absolute;
+    right: -26px;
+    top: 20px;
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+    color: #fff;
+    font-size: 13px;
+    font-weight: 500;
+    padding: 1px 22px;
+    font-size: 13px;
+    font-weight: 500
+}
+
+h5{
+    color: black;
+}
+</style>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.css" integrity="sha256-NAxhqDvtY0l4xn+YVa6WjAcmd94NNfttjNsDmNatFVc=" crossorigin="anonymous" />
+<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    
+<div class="container">
+
+    <div class="row">
+    <div class="col-xl-6" style="padding-right: -300px">
+            <div class="card checkout-order-summary">
+                <div class="card-body">
+                    <div class="p-3 bg-light mb-3">
+                        <h5 class="font-size-16 mb-0">Order Summary</h5>
+                    </div>
+                    <div class="table-responsive">
+                        <table class="table table-centered mb-0 table-nowrap">
+                            <thead>
+                                <tr>
+                                    <th class="border-top-0" style="width: 150px;" scope="col">Product</th>
+                                    <th class="border-top-0" scope="col">Product Desc</th>
+                                    <th class="border-top-0" scope="col">Price</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach(var item in @Model.pizzaViewModels){
+                                    <tr>
+                                        <th scope="row"><img src="data:image/jpeg;base64,@item.pizza.ImageUrl" alt="product-img" title="product-img" class="avatar-lg rounded"></th>
+                                        <td>
+                                            <h5 class="font-size-16 text-truncate1">@item.pizza.Name</h5>
+                                            <small>@item.size.Size1</small><br>
+                                            <small>@item.cakeBasis.CakeBase</small>
+                                            <p class="text-muted mb-0 mt-1">@String.Format("{0:N0} đ", item.pizza.Price + item.size.PriceSize + item.cakeBasis.PriceBase) x @item.amount</p>
+                                        </td>
+                                        <td>@String.Format("{0:N0} đ", (item.pizza.Price + item.size.PriceSize + item.cakeBasis.PriceBase) * item.amount)</td>
+                                    </tr>
+                                    total += (item.pizza.Price + item.size.PriceSize + item.cakeBasis.PriceBase) * item.amount;
+                                }
+                                <tr>
+                                    <td colspan="2">
+                                        <h5 class="font-size-14 m-0">Total :</h5>
+                                    </td>
+                                    <td>
+                                        @String.Format("{0:N0} đ", total)
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-xl-6" style= "padding-left: -150px">
+
+            <div class="card">
+                <div class="card-body">
+                    <ol class="activity-checkout mb-0 px-4 mt-3">
+                        <li class="checkout-item">
+                            <div class="avatar checkout-icon p-1">
+                                <div class="avatar-title rounded-circle bg-primary">
+                                    <i class="bx bxs-truck text-white font-size-20"></i>
+                                </div>
+                            </div>
+                            <div class="feed-item-list">
+                                <div>
+                                    <h5 class="font-size-16 mb-1">Shipping Info</h5>
+                                    <div class="mb-3">
+                                        <form>
+                                            <div>
+                                                <div class="row">
+                                                    <div class="col-lg-4">
+                                                        <div class="mb-3">
+                                                            <label class="form-label" for="billing-name">Name</label>
+                                                            <input type="text" class="form-control1" id="billing-name" value="@Model.user1.UserName" readonly>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-lg-4">
+                                                        <div class="mb-3">
+                                                            <label class="form-label" for="billing-phone">Phone</label>
+                                                            <input type="text" class="form-control1" id="billing-phone" placeholder="Enter Phone no.">
+                                                        </div>
+                                                    </div>
+                                                </div>
+
+                                                <div class="mb-3">
+                                                    <label class="form-label" for="billing-address">Address</label>
+                                                    <textarea class="form-control1" id="billing-address" rows="3" placeholder="Enter full address"></textarea>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="checkout-item">
+                            <div class="avatar checkout-icon p-1">
+                                <div class="avatar-title rounded-circle bg-primary">
+                                    <i class="bx bxs-wallet-alt text-white font-size-20"></i>
+                                </div>
+                            </div>
+                            <div class="feed-item-list">
+                                <div>
+                                    <h5 class="font-size-16 mb-1">Payment Info</h5>
+                                </div>
+                                <div>
+                                <br>
+                                    <h5 class="font-size-14 mb-3">Payment method :</h5>
+                                    <div class="row">
+                                        <div class="">
+                                            <div>
+                                                <label class="card-radio-label">
+                                                    <input type="radio" name="pay-method" id="pay-methodoption3" class="card-radio-input" checked="">
+                                                    <span class="card-radio py-3 text-center text-truncate1">
+                                                        <i class="bx bx-money d-block h2 mb-3"></i>
+                                                        <span>Cash on Delivery</span>
+                                                    </span>
+                                                </label>
+                                            </div>
+                                        </div>
+                                        
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ol>
+                </div>
+                <div style="margin-left: 400px">
+                    <div class="text-end mt-2 mt-sm-0">
+                        <button id="proceedBtn" class="btn btn-success">
+                            <i class="mdi mdi-cart-outline me-1"></i> Proceed
+                        </button>
+                    </div>
+                </div>                
+                <div >
+                    <a href="/Common/Cart" class="btn btn-link text-muted">
+                        <i class="mdi mdi-arrow-left me-1"></i> Continue Shopping </a>
+            </div>
+            </div>
+        </div>
+    </div>  
+</div>
+
+<div id="successModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="successModalLabel"
+		aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+                <div class="modal-body" style="color: green; text-align: center; font-size: large;">
+                    Order successfully!
+                </div>
+			</div>
+		</div>
+	</div>
+
+	<div id="failModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="successModalLabel"
+		aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-body" style="color: red; text-align: center;">
+					Please fill in all fields!
+				</div>
+			</div>
+		</div>
+	</div>
+
+<script>
+     $(document).ready(function() {
+        $('#proceedBtn').click(function() {
+            var name = $('#billing-name').val();
+            var phone = $('#billing-phone').val();
+            var address = $('#billing-address').val();
+            if (name.trim() === '' || phone.trim() === '' || address.trim() === '') {
+                $('#failModal').modal('show');
+				setTimeout(function () {
+					$('#failModal').modal('hide');
+				}, 1500);
+                return;
             }
-
-            .order-details tr:nth-child(odd) {
-                color:wheat;
-            }
-
-
-            .order-details th {
-                background-color: #4CAF50; 
-                color: white; 
-            }
-
-            .order-details a {
-                background-color: #007bff; 
-                color: white; 
-                border: none; 
-                padding: 5px 10px; 
-                border-radius: 5px;
-                cursor: pointer; 
-                text-align: center; 
-            }
-
-                .order-details a:hover {
-                    background-color: #0056b3; 
+            $.ajax({
+                type: 'POST',
+                beforeSend: function (xhr) {
+                    xhr.setRequestHeader("XSRF-TOKEN", $('input:hidden[name="__RequestVerificationToken"]').val());
+                },
+                url: '/Customer/Ordered?handler=Order',
+                data: { 
+                    name: name,
+                    phone: phone,
+                    address: address
+                },
+                success: function (response) {
+                    if(response == 'Order successfully!'){
+                        $('#successModal').modal('show');
+                        setTimeout(function () {
+                            $('#successModal').modal('hide');
+                            window.location.href = '/'; 
+                        }, 1500);
+                    } else {
+                        $('#failModal').modal('show');
+                        setTimeout(function () {
+                            $('#failModal').modal('hide');
+                        }, 800);
+                    }
+                },
+                error: function (jqXHR, textStatus, errorThrown) {
+                    console.error("Error adding item to cart:", textStatus, errorThrown);
                 }
-
-    </style>
-</head>
-<body>
-    <h2>Ordered</h2>
-    <table class="order-details">
-        <thead>
-            <tr>
-                <th>Trạng Thái:</th>
-                <th>Giá:</th>
-                <th>Số Lượng:</th>
-                <th>Tổng Cộng:</th>
-                <th>Hành Động:</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Đang Chờ Xử Lý</td>
-                <td>100.000đ</td>
-                <td>2</td>
-                <td>200.000đ</td>
-                <td><a href="OrderedDetail">Chi Tiết</a></td>
-            </tr>
-
-        </tbody>
-    </table>
-</body>
-
-</html>
+            });
+        });
+    });
+</script>
