--- a/Web_PizzaShop/Pages/Common/LoginPage.cshtml
+++ b/Web_PizzaShop/Pages/Common/LoginPage.cshtml
@@ -35,7 +35,7 @@
                 <form method="POST" class="register-form" id="login-form">
                     <div class="form-group">
 
-                        <input type="text" asp-for="@Model.email" placeholder="Email" />
+                        <input type="text" asp-for="@Model.userName" placeholder="UserName" />
                     </div>
                     <div class="form-group">
                         <label for="your_pass"><i class="fa-solid fa-lock"></i></label>
